--- a/2019-December-Silver-3/2019-December-Silver-3.vcxproj.filters
+++ b/2019-December-Silver-3/2019-December-Silver-3.vcxproj.filters
@@ -19,4 +19,12 @@
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="milkvisits.in">
+      <Filter>Source Files</Filter>
+    </None>
+    <None Include="milkvisits.out">
+      <Filter>Source Files</Filter>
+    </None>
+  </ItemGroup>
 </Project>
