--- a/2014-Silver-2/2014-Silver-2.vcxproj
+++ b/2014-Silver-2/2014-Silver-2.vcxproj
@@ -140,7 +140,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="2014-Silver-2.cpp" />
+    <ClCompile Include="2014-December-Silver-2.cpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="marathon.in" />
