--- a/2014-Silver-2/2014-Silver-2.vcxproj.filters
+++ b/2014-Silver-2/2014-Silver-2.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="2014-Silver-2.cpp">
+    <ClCompile Include="2014-December-Silver-2.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
