more reorganizing and sorting

--- a/2014-December-Silver-3/2014-December-Silver-3.vcxproj
+++ b/2014-December-Silver-3/2014-December-Silver-3.vcxproj
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup Label="ProjectConfigurations">
     <ProjectConfiguration Include="Debug|Win32">
@@ -21,10 +21,9 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{0ec33b88-9d4e-49b7-9d86-981671c77d8d}</ProjectGuid>
-    <RootNamespace>My2014Silver2</RootNamespace>
+    <ProjectGuid>{f2e9c8eb-c53c-4f52-a96e-490c827e8b3c}</ProjectGuid>
+    <RootNamespace>My2014DecemberSilver3</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
-    <ProjectName>2014-December-Silver-2</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -140,11 +139,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="2014-December-Silver-2.cpp" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="marathon.in" />
-    <None Include="marathon.out" />
+    <ClCompile Include="2014-December-Silver-3.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
