--- a/2014-December-Silver-2/2014-December-Silver-2.vcxproj
+++ b/2014-December-Silver-2/2014-December-Silver-2.vcxproj
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup Label="ProjectConfigurations">
     <ProjectConfiguration Include="Debug|Win32">
@@ -21,10 +21,9 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{d568ff74-ba16-47e8-a8d1-16b0d1a1114a}</ProjectGuid>
-    <RootNamespace>My2014Silver3</RootNamespace>
+    <ProjectGuid>{c8ea7228-d898-4600-aca9-9dbfb53455b8}</ProjectGuid>
+    <RootNamespace>My2014DecemberSilver2</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
-    <ProjectName>2014-December-Silver-3</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -140,11 +139,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="2014-December-Silver-3.cpp" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="cowjog.in" />
-    <None Include="cowjog.out" />
+    <ClCompile Include="2014-December-Silver-2.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
